# taller-sesion-02

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: auth.py  config.py  main.py  schemas.py
backend/tests/: test_auth.py
frontend/src/: App.css  App.jsx  index.css
